--- a/languages/SubscribeMailChimpList-ru_RU.po
+++ b/languages/SubscribeMailChimpList-ru_RU.po
@@ -3,23 +3,26 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: SubscribeMailChimpList\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Basepath: ..\n"
-"X-Poedit-KeywordsList: __;_e;_ex:1,2c;_n:1,2;_n_noop:1,2;_nx:1,2,4c;_nx_noop:1,2,3c;_x:1,2c;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
+"X-Poedit-KeywordsList: __;_e;_ex:1,2c;_n:1,2;_n_noop:1,2;_nx:1,2,4c;"
+"_nx_noop:1,2,3c;_x:1,2c;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;"
+"esc_html_e;esc_html_x:1,2c\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Language-Team: \n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Poedit 2.0.7\n"
-"Last-Translator: \n"
-"Language: ru_RU\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
-#: SubscribeMailChimpList.php:48,
+#: SubscribeMailChimpList.php:52,
 #: src/SubscribeMailChimpList/Widgets/SubscribeMailChimpWidget.php:42
 msgid "Subscribe to our newsletter"
 msgstr "Подписаться на рассылку"
@@ -32,11 +35,11 @@ msgstr "API ключ MailChimp"
 msgid "MailChimp List id"
 msgstr "ID списка в MailChimp"
 
-#: src/SubscribeMailChimpList/Classes/Form.php:36
+#: src/SubscribeMailChimpList/Classes/Form.php:35
 msgid "Enter your E-mail..."
 msgstr "Введите E-mail…"
 
-#: src/SubscribeMailChimpList/Classes/Form.php:40
+#: src/SubscribeMailChimpList/Classes/Form.php:39
 msgid "Subscribe"
 msgstr "Подписаться"
 
