--- a/languages/SubscribeMailChimpList-ru_RU.po
+++ b/languages/SubscribeMailChimpList-ru_RU.po
@@ -43,6 +43,26 @@ msgstr "Введите E-mail…"
 msgid "Subscribe"
 msgstr "Подписаться"
 
+#: src/SubscribeMailChimpList/Classes/MailChimpAjax.php:36
+msgid "You have subscribed"
+msgstr "Вы подписались"
+
+#: src/SubscribeMailChimpList/Classes/MailChimpAjax.php:38
+msgid "Success"
+msgstr "Готово"
+
+#: src/SubscribeMailChimpList/Classes/MailChimpAjax.php:45
+msgid "Member Exists"
+msgstr "Уже добален"
+
+#: src/SubscribeMailChimpList/Classes/MailChimpAjax.php:52
+msgid "Send failed"
+msgstr "Ошибка отправки"
+
+#: src/SubscribeMailChimpList/Classes/MailChimpAjax.php:60
+msgid "Invalid Email"
+msgstr "Неверный Email"
+
 #: src/SubscribeMailChimpList/Widgets/SubscribeMailChimpWidget.php:23
 msgid "Subscribe widget "
 msgstr "Виджет подписки "
